Require email to be available at registration
This resolves a security vulnerability which would allow
an adversary to register an account with an email address
already in use.

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -100,6 +100,8 @@ accountRegistrationCommand.email.blank=[email] cannot be blank
 accountRegistrationCommand.email.nullable=[email] is required
 
 accountRegistrationCommand.email.email.invalid=[email] is not a valid e-mail address
+accountRegistrationCommand.email.unavailable=[email] is not available
+
 typeMismatch.in.reeltime.account.AccountRegistrationCommand.email=[email] is invalid
 
 accountRegistrationCommand.username.blank=[username] cannot be blank
